# sous-chef-client-example

./: README.md  pyproject.toml
app/: __init__.py  config.py  deps.py  kitchen_service.py  main.py  maps_experiment_queries.py  maps_queries.py  processor.py  queue.py  run_queue.py  schemas.py  store.py  templates.py
app/data/: data_nigeria_lga.json
tests/: test_kitchen_routes.py  test_reference.py  test_run_queue.py  test_webhook.py
